--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,11 +57,6 @@
 
         </activity>
         <activity
-            android:name=".ui.GailActivity"
-            android:exported="false">
-
-        </activity>
-        <activity
             android:name=".home.newNotif.NewNotiActivity"
             android:exported="false">
 
@@ -258,10 +253,6 @@
             android:label="City Gate Station"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".home.HomeManager"
-            android:label="Home"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".home.HomeOperator"
             android:label="Home"
             android:screenOrientation="portrait" />
@@ -310,22 +301,31 @@
             android:label="Home"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".splashscreen.SplashScreen"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".splashscreen.LandingPage"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:configChanges="uiMode|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.GailActivity"
+            android:exported="false"
+            android:configChanges="uiMode|orientation|screenSize" />
+
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:configChanges="uiMode|orientation|screenSize" />
+
+        <activity
+            android:name=".home.HomeManager"
+            android:label="Home"
+            android:screenOrientation="portrait"
+            android:configChanges="uiMode|orientation|screenSize" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
